[package]
name = "aster"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
async-stream = "0.3.6"
base64 = "0.22.1"
bytes = "1.10.1"
crossterm = { version = "0.28.1", features = ["event-stream"] }
env_filter = "0.1.3"
futures = "0.3.31"
futures-util = "0.3.31"
glob = "0.3.2"
iroh = "0.34.1"
iroh-base = "0.34.1"
log = "0.4.27"
n0-future = "0.1.2"
pin-project-lite = "0.2.16"
postcard = "1.1.1"
rand = "0.8.5"
ratatui = "0.29.0"
rodio = { version = "0.20.1", default-features = false, features = ["symphonia-all"] }
serde = { version = "1.0.219", features = ["derive"] }
stream-download = "0.21.0"
tokio = "1.44.2"
tokio-util = { version = "0.7.15", features = ["io"] }
tui-tree-widget = "0.23.1"
tui-widgets = "0.4.1"

[dev-dependencies]
arbtest = "0.3.2"
